# Learnora

./: README.md  docker-compose.yml  learnora.db
core-service/: .env.docker  .env.example  .env.samlpe  docker-compose.yml  main.py  pyproject.toml
core-service/app/: config.py  main.py  models.py
core-service/app/database/: connection.py  session.py
core-service/app/db/: base.py  database.py
core-service/app/features/agent/: graph.py  router.py  schemas.py  service.py
core-service/app/features/agent/learning_path_graph/: learning_path_graph.py  type.py
core-service/app/features/agent/mcq_generator/: router.py  schemas.py  service.py
core-service/app/features/content_discovery/: router.py
core-service/app/features/learning_path/: crud.py  graph.py  kg.py  models.py  router.py  schemas.py  service.py  utils.py
core-service/app/features/learning_path_planner/: crud.py  models.py  router.py  schemas.py  service.py
core-service/app/features/preference/: preference_router.py
core-service/app/features/user_knowledge/: kg.py  router.py  service.py
core-service/app/features/users/: kg.py  manager.py  models.py
core-service/app/features/users/knowledge/: router.py  service.py
core-service/app/kg/: __init__.py  config.py  storage.py
core-service/app/kg/ontologies/: learning_path.py  user_knowledge.py
core-service/app/learning_path_planner/: graph.py  learning_path_router.py  lpp_workflow.py
core-service/app/util/: kg_util.py
core-service/data/graph/: ontology.ttl
core-service/tests/: test_kg_services.py  test_sample.py
learner-app/: index.html  (+2 more)
(+74 files in other folders)
