[project]
name = "core-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "langchain-core>=0.3.79",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.10",
    "python-dotenv>=1.1.1",
]
